[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hwosim"
description = "A JAX-based toolkit for end-to-end HWO mission simulations, integrating yippy, orbix, coronagraphoto, and coronalyze."
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
dynamic = ['readme', 'version']
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "equinox",
  "jax",
  "jaxlib",
  "yippy",
  "orbix",
  "coronagraphoto",
  "coronalyze",
]
[project.optional-dependencies]
dev = ["ruff", "pre-commit"]
docs = [
  "sphinx",
  "myst-nb",
  "sphinx-book-theme",
  "sphinx-autoapi",
  "sphinx_autodoc_typehints",
  "ipython",
  "matplotlib",
]
test = ["nox", "pytest", "hypothesis", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/CoreySpohn/hwosim"
Issues = "https://github.com/CoreySpohn/hwosim/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/hwosim/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.ruff.lint]
select = ["D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["src/hwosim"]

[tool.hatch.build.targets.sdist]
exclude = ["/data", "/scripts", "/docs", "/tests", "/.github"]
